slight fixes + comments for interaction with RegexUtils